# flutter_ocr

./: Makefile  README.md  analysis_options.yaml  build.yaml  cspell.json  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/include/: det_process.h  pipeline.h
android/app/src/main/: AndroidManifest.xml
android/include/: db_post_process.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: logger.dart  main.dart  result_screen.dart
lib/core/constants/: assets.gen.dart
lib/core/models/: jp_dict_6861.txt  ocr_pipeline.dart  ocr_result.dart  ocr_result.freezed.dart  ocr_result.g.dart
lib/core/utils/: ocr_bindings.dart  ocr_pipeline.dart
lib/models/: cls_ang_v4.nb  ocr_pipeline.dart
test/: widget_test.dart
